...
        <scene sceneID="wrg-3w-IQm">
            <objects>
                <viewController title="Welcome to Lambdi Pet" id="Tod-Bz-Tuj" customClass="HomeViewController" customModule="Gigapet" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="q48-3h-F9P">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="BrownOtter" translatesAutoresizingMaskIntoConstraints="NO" id="9Y7-lm-zFp">
                                <rect key="frame" x="25" y="156" width="364" height="566"/>
                                <accessibility key="accessibilityConfiguration" identifier="PetImageView"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="9Y7-lm-zFp" secondAttribute="height" multiplier="3.29:5.12" id="JpT-bP-CA1"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="134" height="42"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="Feed My Pet"/>
                                        <connections>
                                            <segue destination="DgB-6d-C4b" kind="show" identifier="FeedPetSegue" id="inp-KV-oJN"/>
...
                                        <rect key="frame" x="0.0" y="58" width="134" height="42"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="See Entries"/>
                                        <connections>
                                            <segue destination="08X-En-Q5y" kind="show" identifier="PastEntriesSegue" id="kSe-zR-smV"/>
...
                        <viewLayoutGuide key="safeArea" id="5gk-Kw-njk"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" largeTitleDisplayMode="never" id="TtB-g0-GvA">
                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="mRH-ak-gCr">
                            <connections>
                                <segue destination="BY0-NT-Dra" kind="presentation" identifier="ShowAuthScreenSegue" modalPresentationStyle="fullScreen" id="5Vf-uu-azt"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="58.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OI-Uf-yK6">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ex: Bananas" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZdL-T5-r7y">
                                                <rect key="frame" x="0.0" y="24.5" width="374" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="continue"/>
                                            </textField>
                                        </subviews>
...
                                        <rect key="frame" x="0.0" y="70.5" width="374" height="194.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date/Time Fed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcP-F3-c9L">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="277" width="374" height="194.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDq-Gj-XQZ">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EuG-vy-3SP">
                                                <rect key="frame" x="0.0" y="24.5" width="374" height="170"/>
                                                <accessibility key="accessibilityConfiguration" identifier="FeedCategoryPicker"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="170" id="cnu-hC-f1U"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" placeholder="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1V8-7Z-ulb">
                                        <rect key="frame" x="34" y="0.0" width="75" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FeedQuantityField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="lno-pG-y6X"/>
...
                                <rect key="frame" x="145" y="675" width="124" height="39"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Feed My Pet!"/>
                                <connections>
                                    <action selector="feedButtonTapped:" destination="DgB-6d-C4b" eventType="touchUpInside" id="OsG-Lj-XEr"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tts-Ev-TcF">
