...

    private var loader: NetworkLoader {
        return isUITesting ? mockLoader : URLSession.shared
    }

    private lazy var mockLoader: NetworkLoader = {
        let info = UserInfo(id: 1, token: "testToken", petname: "Kilmonger")
        let data = try? JSONEncoder().encode(info)
        return NetworkMockingSession(mockData: data, mockError: nil)
    }()

    // MARK: - Keychain Access

...
